# Starcraft-Simulator

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
eef/: Cargo.toml
eef/src/: main.rs
fixed32/: Cargo.toml
fixed32/src/: arithmetic.rs  cmp.rs  conversion.rs  lib.rs  main.rs  math.rs  misc.rs
mods/liberty.sc2mod/base.sc2data/gamedata/: unitdata.xml
mods/voidmulti.sc2mod/base.sc2data/gamedata/: abildata.xml
sc2_sim/: Cargo.toml
sc2_sim/src/: army.rs  coordinator.rs  effect.rs  lib.rs  main.rs  unit.rs  utils.rs
sc2_sim/src/effect/: attack.rs  spell.rs
sc2_sim/src/unit/: builder.rs  unit_data.rs  upgrades.rs  weapon.rs  weapon_data.rs
sc2_xml/: Cargo.toml  unit_data.rs
sc2_xml/src/: lib.rs  main.rs  parser.rs  write.rs
src/: army.rs  coordinator.rs  fixed.rs  lib.rs  main.rs  ttk.rs  unit.rs
src/unit/: unit_data.rs  upgrades.rs  weapon.rs  weapon_data.rs
