workspace = { members = ["eef"] }
[package]
name = "sc2_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_soft_float = "0.1.4"
fixed = "1.27.0"
fxhash = "0.2.1"
itertools = "0.12.1"
paste = "1.0.14"
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3
