[package]
name = "sc2_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_soft_float = "0.1.4"
env_logger = "0.11.3"
fixed32 = {path="../fixed32"}
hashbrown = "0.14"
itertools = "0.13.0"

log = "0.4.21"
paste = "1.0.14"
quanta = "0.12.3"
rand = "0.8.5"
roxmltree = "0.20.0"
strum = { version = "0.26.2", features = ["derive"] }
# smallvec = {version = "1.13", features = ["union", "const_generics", "const_new"]}

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3